[package]
name = "tiny-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.2", optional = true }
nanoid = "0.4.0"
config = "0.13.1"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "mysql" ] }
tera = { version = "1", default-features = false }
lazy_static = "1.4.0"
log = "0.4"
simple_logger = "4.0.0"
